@@ -237,11 +237,16 @@ class DofMapTest(unittest.TestCase):
             self.assertRaises(RuntimeError, lambda : W.dofmap().vertex_to_dof_map(self.mesh))
 
 
-    def test_num_entity_dofs(self):
+    def test_entity_dofs(self):
         
         # Test that num entity dofs is correctly wrapped to dolfin::DofMap
         V = FunctionSpace(self.mesh, "CG", 1)
         self.assertEqual(V.dofmap().num_entity_dofs(0), 1)
+        self.assertEqual(V.dofmap().num_entity_dofs(1), 0)
+        self.assertEqual(V.dofmap().num_entity_dofs(2), 0)
+
+        V = VectorFunctionSpace(self.mesh, "CG", 1)
+        self.assertEqual(V.dofmap().num_entity_dofs(0), 2)
         self.assertEqual(V.dofmap().num_entity_dofs(1), 0)
         self.assertEqual(V.dofmap().num_entity_dofs(2), 0)
 
@@ -264,7 +269,15 @@ class DofMapTest(unittest.TestCase):
         self.assertEqual(V.dofmap().num_entity_dofs(0), 0)
         self.assertEqual(V.dofmap().num_entity_dofs(1), 0)
         self.assertEqual(V.dofmap().num_entity_dofs(2), 3)
-        
+
+        V = VectorFunctionSpace(self.mesh, "CG", 1)
+
+        # Note this numbering is dependent on FFC and can change
+        # This test is here just to check that we get correct numbers
+        # mapped from ufc generated code to dolfin
+        for i, cdofs in enumerate([[0,3], [1,4], [2,5]]):
+            dofs = V.dofmap().tabulate_entity_dofs(0, i)
+            self.assertTrue(all(d==cd for d, cd in zip(dofs, cdofs)))
 
 if __name__ == "__main__":
     print ""
